[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemies/boot-spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/Boot.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/GenericEnemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 31.0123 )

[sub_resource type="Animation" id=2]
resource_name = "Step"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 4, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/KinematicBody2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 17 ), Vector2( 0, 31 ), Vector2( 0, 40 ), Vector2( 0, 46 ), Vector2( 0, 46 ), Vector2( 0, 47 ), Vector2( 0, 43 ), Vector2( 0, 18 ) ]
}

[node name="Boot" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -59 )
texture = ExtResource( 1 )
hframes = 4
vframes = 2
frame = 6

[node name="KinematicBody2D" type="KinematicBody2D" parent="Sprite"]
position = Vector2( 0, 45 )
collision_layer = 256
collision_mask = 0
motion/sync_to_physics = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/KinematicBody2D"]
position = Vector2( -1, -20.0123 )
shape = SubResource( 1 )

[node name="WallCast" type="RayCast2D" parent="Sprite"]
position = Vector2( 0, 39 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Step = SubResource( 2 )

[node name="LeftCast" type="RayCast2D" parent="."]
position = Vector2( -25, 0 )
enabled = true

[node name="RightCast" type="RayCast2D" parent="."]
position = Vector2( 25, 0 )
enabled = true
